name:                  demo
version:               1
license:               BSD3
license-file:          LICENSE
author:                Thomas Feron
maintainer:            thomas.feron@redspline.com
category:              Database
build-type:            Simple
cabal-version:         >=1.10

executable demo
  main-is:             Main.hs
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:  DeriveGeneric
                       TypeSynonymInstances
                       FlexibleInstances
                       MultiParamTypeClasses
                       OverloadedStrings

  build-depends:       base >=4.8 && <4.9
                     , seakale
                     , seakale-postgresql
                     , mtl
