name:                  demo
version:               1
license:               BSD3
license-file:          LICENSE
author:                Thomas Feron
maintainer:            thomas.feron@redspline.com
category:              Database
build-type:            Simple
cabal-version:         >=1.10

executable seakale-demo-simple
  main-is:             Simple.hs
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:  DeriveGeneric
                       FlexibleInstances
                       MultiParamTypeClasses
                       OverloadedStrings
                       RecordWildCards

  other-modules:       Shared

  build-depends:       base >=4.8 && <4.9
                     , seakale
                     , seakale-postgresql
                     , mtl

executable seakale-demo-storable
  main-is:             Storable.hs
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:  DeriveGeneric
                       FlexibleInstances
                       MultiParamTypeClasses
                       OverloadedStrings
                       OverloadedLists
                       RecordWildCards
                       TypeFamilies

  other-modules:       Shared

  build-depends:       base >=4.8 && <4.9
                     , seakale
                     , seakale-postgresql
                     , mtl

executable seakale-demo-join
  main-is:             Join.hs
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:  DeriveGeneric
                       FlexibleInstances
                       MultiParamTypeClasses
                       OverloadedStrings
                       OverloadedLists
                       RecordWildCards
                       TypeFamilies
                       GADTs
                       DataKinds

  other-modules:       Shared

  build-depends:       base >=4.8 && <4.9
                     , seakale
                     , seakale-postgresql
                     , mtl
