name:                  seakale-postgresql
version:               0.9.0
synopsis:              PostgreSQL backend for Seakale
license:               BSD3
license-file:          LICENSE
author:                Thomas Feron
maintainer:            thomas.feron@redspline.com
category:              Database
build-type:            Simple
extra-source-files:    ChangeLog.md
cabal-version:         >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:  TypeFamilies
                       OverloadedStrings

  exposed-modules:     Database.Seakale.PostgreSQL.Base
                       Database.Seakale.PostgreSQL.Types

  build-depends:       base >=4.8 && <4.9
                     , seakale
                     , postgresql-libpq
                     , bytestring
                     , mtl
                     , free
