name:                  seakale-tests
version:               0.9.0
synopsis:              Helpers to test code using Seakale
license:               BSD3
license-file:          LICENSE
author:                Thomas Feron
maintainer:            thomas.feron@redspline.com
category:              Database
build-type:            Simple
extra-source-files:    ChangeLog.md
cabal-version:         >=1.10

source-repository head
  type:                darcs
  location:            http://darcs.redspline.com/seakale
  tag:                 0.9.0

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:  LambdaCase
                       TypeFamilies
                       DeriveFunctor
                       RankNTypes
                       StandaloneDeriving
                       FlexibleContexts

  exposed-modules:     Database.Seakale.Request.Tests
                       Database.Seakale.Request.Tests.Mock

  build-depends:       base >=4.8 && <4.9
                     , seakale
                     , mtl
                     , bytestring
                     , free
                     , recursion-schemes